--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,3 +1,16 @@
 body {
-	/*background-color:pink;*/
+	position: relative;
+}
+
+.page-home {
+	position: absolute;
+	top:0
+	right:0;
+	bottom: 0;
+	left: 0;
+
+	width: 200px;
+	height: 200px;
+	
+	margin:auto;
 }
