--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,16 +1,16 @@
 body {
-	position: relative;
+	/*position: relative;*/
 }
 
 .page-home {
 	position: absolute;
-	top:0
+	top:0;
 	right:0;
 	bottom: 0;
 	left: 0;
 
-	width: 200px;
-	height: 200px;
+	width: 290px;
+	height: 390px;
 	
 	margin:auto;
 }
