--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -9,8 +9,24 @@ body {
 	bottom: 0;
 	left: 0;
 
-	width: 290px;
+	width: 390px;
 	height: 390px;
 	
 	margin:auto;
+}
+
+.title {
+
+	font-size: 30px;
+    font-family: Helvetica, sans-serif;
+}
+
+.p {
+	font-size: 20px;
+	font-family: Helvetica, sans-serif;
+}
+
+.link {
+    color: black;
+    text-decoration: none;
 }
