--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -16,12 +16,15 @@ body {
 }
 
 .title {
+	padding-bottom: 40px;
 
 	font-size: 30px;
     font-family: Helvetica, sans-serif;
 }
 
 .p {
+    padding-bottom: 30px;
+
 	font-size: 20px;
 	font-family: Helvetica, sans-serif;
 }
