--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -33,3 +33,11 @@ body {
     color: black;
     text-decoration: none;
 }
+
+.link::after {
+	content: '';
+	background-color: red;
+	height: 1px;
+	width: auto;
+	padding-bottom: 10px;
+}
