--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -3,16 +3,11 @@ body {
 }
 
 .page-home {
-	position: absolute;
-	top:0;
-	right:0;
-	bottom: 0;
-	left: 0;
 
     width: 720px;
     height: 530px;
 	
-	margin:auto;
+
 }
 
 .title {
@@ -23,10 +18,7 @@ body {
 }
 
 .p {
-    padding-bottom: 30px;
-
 	font-size: 20px;
-	font-family: Helvetica, sans-serif;
 }
 
 .link {
@@ -34,16 +26,30 @@ body {
     text-decoration: none;
 }
 
-// .link::after {
-	
-// 	display: block;
-	
-// 	width: 10%;
-// 	height: 2px;
-	
-// 	margin: 0 auto;
 
-// 	background-color: black;
+@media screen and (max-width: 724px) {
+	.page-home {
+		position: absolute;
+		top:0;
+		right:0;
+		bottom: 0;
+		left: 0;
 
-// 	content: '';
-// }
+
+		width: 94%;
+	    height: 100%;
+	
+	    padding: 3%;
+	    margin:auto;
+	}
+
+	.p {
+		
+	    // width: 230px;
+
+	    padding-bottom: 30px;
+
+	    font-size: 12px;
+	    font-family: Helvetica, sans-serif;
+	}
+}
