--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,7 +1,24 @@
+// LAYOUT
+
+// * {
+// 	-webkit-box-sizing: border-box;
+//     -moz-box-sizing: border-box;
+//     box-sizing: border-box;
+// }
+
 body {
-	/*position: relative;*/
+	
+    width: 100%;
+    height: 100%;
+    
+    margin: 0;
+
+    // background-image: url(../img/texture-background-white.jpg);
+    // background-repeat: repeat;
 }
 
+
+// PAGE HOME
 .page-home {
 	position: absolute;
 	top: 0;
@@ -9,12 +26,13 @@ body {
 	bottom: 0;
 	left: 0;
 
-
-	width: 94%;
-    height: 94%;
-
-    padding: 3%;
-    margin: auto;
+    width: 88%;
+    height: 100%;
+    
+    padding: 6%;
+    margin: 0;
+    
+    background-color: red;
 }
 
 .title {
