--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,10 +1,3 @@
-// LAYOUT
-
-// * {
-// 	-webkit-box-sizing: border-box;
-//     -moz-box-sizing: border-box;
-//     box-sizing: border-box;
-// }
 
 body {
 	
@@ -12,6 +5,8 @@ body {
     height: 100%;
     
     margin: 0;
+
+    line-height: 0;
 
     // background-image: url(../img/texture-background-white.jpg);
     // background-repeat: repeat;
