--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,19 +1,3 @@
-
-body {
-	
-    width: 100%;
-    height: 100%;
-    
-    margin: 0;
-
-    line-height: 0;
-
-    // background-image: url(../img/texture-background-white.jpg);
-    // background-repeat: repeat;
-}
-
-
-// PAGE HOME
 .page-home {
 	position: absolute;
 	top: 0;
@@ -50,13 +34,13 @@ body {
 }
 
 
-@media screen and (min-width: 320px) {
+// @media screen and (min-width: 320px) {
 
-	.p {
+// 	.p {
 
-	    // padding-bottom: 30px;
+// 	    // padding-bottom: 30px;
 
-	    font-size: 12px;
-	    font-family: Helvetica, sans-serif;
-	}
-}
+// 	    font-size: 12px;
+// 	    font-family: Helvetica, sans-serif;
+// 	}
+// }
