--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,17 +1,31 @@
-.page-home {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+body {
+	position: fixed;
+	line-height: 0;
+    height: 100%;
+    width: 100%;
+}
 
-    width: 88%;
+.main {
+	position: relative;
+
+    width: 100%;
     height: 100%;
     
-    padding: 6%;
+    padding: 0;
     margin: 0;
     
-    background-color: red;
+    background-image: url('../public/static/img/homepage-background.GIF');
+    background-size: cover;
+}
+
+.page-home {
+
+	width: 80%;
+
+	color: white;
+    
+    padding: 5%;
+    margin: auto;
 }
 
 .title {
@@ -29,18 +43,6 @@
 }
 
 .link {
-    color: black;
+    color: grey;
     text-decoration: none;
 }
-
-
-// @media screen and (min-width: 320px) {
-
-// 	.p {
-
-// 	    // padding-bottom: 30px;
-
-// 	    font-size: 12px;
-// 	    font-family: Helvetica, sans-serif;
-// 	}
-// }
