--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,3 +1,11 @@
+html {
+	background: url('../img/homepage-background.gif') no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+    background-size: cover;
+}
+
 body {
 	position: fixed;
 	line-height: 0;
@@ -13,9 +21,7 @@ body {
     
     padding: 0;
     margin: 0;
-    
-    background-image: url('../img/homepage-background.gif');
-    background-size: cover;
+   
 }
 
 .page-home {
