--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -26,12 +26,19 @@ body {
 
 .page-home {
 
-	width: 80%;
+	position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 
-	color: white;
-    
+    width: 80%;
+    height: 60%;
+
     padding: 5%;
     margin: auto;
+ 
+    color: white;    
 }
 
 .title {
