--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,4 +1,8 @@
 html {
+	
+	height:100%;
+ 	min-height:100%;
+
 	background: url('../img/homepage-background.gif') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -8,9 +12,12 @@ html {
 
 body {
 	position: fixed;
-	line-height: 0;
+
+	min-height:100%;
     height: 100%;
     width: 100%;
+
+    line-height: 0;
 }
 
 .main {
