--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,15 +1,3 @@
-html {
-	
-	height:100%;
- 	min-height:100%;
-
-	background: url('../img/homepage-background.gif') no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-    background-size: cover;
-}
-
 body {
 	position: fixed;
 
@@ -56,7 +44,7 @@ body {
     font-family: Helvetica, sans-serif;
 }
 
-.p {
+.subtitle {
 	padding-bottom: 30px;
 
 	font-size: 20px;
