--- a/public/static/css/layout.css
+++ b/public/static/css/layout.css
@@ -14,6 +14,8 @@ body {
 .main {
     height: 100%;
     width: 100%;
+
+    min-width: 320px;
 }
 
 .page {
@@ -51,6 +53,7 @@ body {
 	position: relative;
 	
     width: 100%;
+    max-width: 750px;
 
 	font-family: Verdana, Arial, sans-serif;
 }
