--- a/public/static/css/layout.css
+++ b/public/static/css/layout.css
@@ -32,6 +32,18 @@ body {
     
 }
 
+.ir {
+	display: block;
+    font: 0/0 a;
+    text-shadow: none;
+    color: transp
+}
+
+.svg {
+	width: 38px;
+	height: 38px;
+}
+
 .page-home {
 
 }
