--- a/public/static/css/page-home.css
+++ b/public/static/css/page-home.css
@@ -64,3 +64,11 @@
 .page-home__button-primary {
 	margin: 0 auto;
 }
+
+.section-contact__subtitle {
+	text-align: center;
+}
+
+.section-contact__h4 {
+	text-align: center;
+}
