--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -1,3 +1,32 @@
+/*===============
+|    RESET     |
+/*=============== */
+   @import url("/Users/LMS/Code/github-pages/public/static/css/reset.css");
+
+/*===============
+|    LAYOUT     |
+/*=============== */
+
+    @import url("/Users/LMS/Code/github-pages/public/static/css/layout.css");
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .section-main__copy {
     display: block;
 
