--- a/public/static/css/buttons.css
+++ b/public/static/css/buttons.css
@@ -1,9 +1,53 @@
-/* Buttons */
+/*
+------------------------------------------------------
+    BUTTON BASE
+------------------------------------------------------
+*/
 
 .button {
 	text-decoration: none;
     cursor: pointer;
 }
+
+/*
+------------------------------------------------------
+    BUTTON PRIMARY
+------------------------------------------------------
+*/
+
+.button-primary {
+    display: block;
+    
+    width: 149px;
+    height: 52px;
+
+    font-weight: bold;
+    color: #fff;
+    background: #91CDC7;
+    font-size: 1.2em;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    padding: 12px 25px;
+    
+    -webkit-transition: all 0.15s linear;
+    -moz-transition: all 0.15s linear;
+    -o-transition: all 0.15s linear;
+    transition: all 0.15s linear;
+    outline: none;
+    text-decoration: none;
+}
+
+.button-primary:hover {
+    color: #fff;
+    background-color: #5cb5ac;
+}
+
+/*
+------------------------------------------------------
+    BUTTON ARROW
+------------------------------------------------------
+*/
 
 .button-arrow {
     width: 120px;
@@ -18,34 +62,14 @@
 	transform: scaleX(-1);
 }
 
-.button-primary {
-	display: block;
-    
-    width: 149px;
-    height: 52px;
-
-	font-weight: bold;
-    color: #fff;
-    background: #91CDC7;
-    font-size: 1.2em;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    padding: 12px 25px;
-    
-   	-webkit-transition: all 0.15s linear;
-    -moz-transition: all 0.15s linear;
-    -o-transition: all 0.15s linear;
-    transition: all 0.15s linear;
-    outline: none;
-    text-decoration: none;
-}
-
-.button-primary:hover {
-    color: #fff;
-    background-color: #5cb5ac;
-}
+/*
+------------------------------------------------------
+    BUTTON SOCIAL
+------------------------------------------------------
+*/
 
 .button-social {
     display: inline-block;
 }
+
+
