refactoring timeline css and copy updates

--- a/public/static/css/typography.css
+++ b/public/static/css/typography.css
@@ -35,6 +35,7 @@
 	/*width: 270px;*/
 
 	font-size: 35px;
+	font-family: Helvetica Neue, Helvetica, sans-serif;
 	line-height: 1.5;
 
 	color: #fff;
