--- a/public/static/css/timeline.css
+++ b/public/static/css/timeline.css
@@ -1,56 +1,51 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/*
+------------------------------------------------------
+    TIMELINE INTRO
+------------------------------------------------------
+*/
 
-body {
-  font: normal 16px/1.5 "Helvetica Neue", sans-serif;
-  background: #456990;
+.timeline__intro {
   color: #fff;
-  overflow-x: hidden;
-  padding-bottom: 50px;
-}  
-
-
-/* INTRO SECTION
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.intro {
   background: #336699;
   padding: 100px 0;
 }
 
-.container {
+.timeline__intro-container {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
 }
 
-h1 {
+.timeline__header {
   font-size: 2.5rem;
 }
 
 
-/* TIMELINE
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/*
+------------------------------------------------------
+    TIMELINE
+------------------------------------------------------
+*/
+
 .timeline {
   margin-bottom: 80px;
 }
 
-.timeline ul li {
+.timeline__list__item {
   list-style-type: none;
   position: relative;
   width: 6px;
   margin: 0 auto;
   padding-top: 50px;
   background: #fff;
+  font: normal 16px/1.5 "Helvetica Neue", sans-serif;
+  background: #456990;
+  color: #fff;
+  padding-bottom: 50px;
 }
 
-.timeline ul li::after {
+.timeline__list__item::after {
   content: '';
   position: absolute;
   left: 50%;
@@ -62,7 +57,13 @@ h1 {
   background: inherit;
 }
 
-.timeline ul li div {
+/*
+------------------------------------------------------
+    TIMELINE BLOCK
+------------------------------------------------------
+*/
+
+.timeline__block {
   position: relative;
   bottom: 0;
   width: 400px;
@@ -70,7 +71,7 @@ h1 {
   background: #336699;
 }
 
-.timeline ul li div::before {
+.timeline__block::before {
   content: '';
   position: absolute;
   bottom: 7px;
@@ -79,21 +80,21 @@ h1 {
   border-style: solid;
 }
 
-.timeline ul li:nth-child(odd) div {
+.timeline__list__item:nth-child(odd) .timeline__block {
   left: 45px;
 }
 
-.timeline ul li:nth-child(odd) div::before {
+.timeline__list__item:nth-child(odd) .timeline__block::before {
   left: -15px;
   border-width: 8px 16px 8px 0;
   border-color: transparent #336699 transparent transparent;
 }
 
-.timeline ul li:nth-child(even) div {
+.timeline__list__item:nth-child(even) .timeline__block {
   left: -439px;
 }
 
-.timeline ul li:nth-child(even) div::before {
+.timeline__list__item:nth-child(even) .timeline__block::before {
   right: -15px;
   border-width: 8px 0 8px 16px;
   border-color: transparent transparent transparent #336699;
