--- a/public/static/css/typography.css
+++ b/public/static/css/typography.css
@@ -63,4 +63,10 @@
 	text-decoration: none;
     font-weight: bold;
     color: #fff;
+    transition: .2s ease-in-out;
+}
+
+.link:hover{
+    color: #336699;
+    cursor: pointer;
 }
