--- a/public/static/css/page-home.css
+++ b/public/static/css/page-home.css
@@ -75,7 +75,7 @@
 
 	height: 500px; 
     
-    background-image: url("/public/static/img/ischia.jpg");
+    background: url(/public/static/img/ischia.jpg);
 
     background-attachment: fixed;
     background-position: center;
@@ -149,7 +149,7 @@
 
 	height: 500px; 
     
-    background-image: url("/public/static/img/geneva-with-dad.jpg");
+    background: url(/public/static/img/geneva-with-dad.jpg);
 
     background-attachment: fixed;
     background-position: center;
