--- a/public/static/css/page-home.css
+++ b/public/static/css/page-home.css
@@ -80,7 +80,7 @@
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 500%;
 }
 
 /*
@@ -154,7 +154,7 @@
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 240%;
 }
 
 
