updating background position

--- a/public/static/css/page-home.css
+++ b/public/static/css/page-home.css
@@ -78,7 +78,7 @@
     background: url(/public/static/img/ischia-1.jpg);
 
     background-attachment: fixed;
-    background-position: center;
+    background-position: top center;
     background-repeat: no-repeat;
     background-size: 500%;
 }
@@ -152,7 +152,7 @@
     background: url(/public/static/img/geneva-with-dad-1.jpg);
 
     background-attachment: fixed;
-    background-position: center;
+    background-position: top center;
     background-repeat: no-repeat;
     background-size: 240%;
 }
