--- a/public/static/css/page-home.css
+++ b/public/static/css/page-home.css
@@ -151,9 +151,9 @@
     
     background: url(/public/static/img/geneva-with-dad-1.jpg);
 
-/*    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-position: center;
-    background-repeat: no-repeat;*/
+    /*background-repeat: no-repeat;*/
     background-size: cover;
 }
 
