--- a/public/static/css/layout.css
+++ b/public/static/css/layout.css
@@ -10,7 +10,7 @@ body {
     height: 100%;
     margin: 0;
 
-    background-color: #336699;
+    background-color: #fff;
 }
 
 .main {
@@ -26,6 +26,6 @@ body {
     min-width: 100%;
     min-height: 100%;
 
-    background-color: #91CDC7;
+    background-color: #fff;
     
 }
